# agentv

./: .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: export.rs  ingest.rs  mod.rs  models.rs
apps/desktop/src/lib/: types.ts
apps/desktop/src/lib/components/: AnalyticsPanel.svelte  CommandPalette.svelte  CostLatencyPanel.svelte  DataTable.svelte  Dialog.svelte  Drawer.svelte  EventInspector.svelte  FilterBar.svelte  IngestStatusPanel.svelte  LiveLogViewer.svelte  Modal.svelte  SearchPanel.svelte  SessionList.svelte  SessionViewer.svelte  Sheet.svelte  StatusPanel.svelte  SupportPanel.svelte  Toast.svelte  TransitionWrapper.svelte  WelcomeScreen.svelte
apps/desktop/src/lib/components/home/: HomeBookmarksSheet.svelte  HomeEventInspectorModal.svelte  HomeIngestProgressFooter.svelte  HomeSessionEmptyState.svelte  HomeSessionListDrawer.svelte  HomeSessionMetaModal.svelte  HomeSessionsTab.svelte  HomeSupportDialog.svelte  HomeTopHeader.svelte
apps/desktop/src/lib/stores/: bookmarks.svelte.ts  filters.svelte.ts  keyboard.svelte.ts  logger.svelte.ts  notifications.svelte.ts  supportNudge.svelte.ts  toast.svelte.ts  toast.ts
apps/desktop/src/lib/utils/: sessionDisplay.ts
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/worker/: .env.sample  .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
apps/worker/src/: index.ts
crates/adapters/: Cargo.toml
crates/adapters/src/: claude.rs  codex.rs  crush.rs  lib.rs  opencode.rs
crates/api/: Cargo.toml
crates/api/src/: commands.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: doctor.rs  export.rs  ingest.rs  list.rs  mod.rs  recompute.rs  search.rs  show.rs  stats.rs  support.rs
crates/core/: Cargo.toml
crates/core/src/: models.json  models.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  scanner.rs  watcher.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs  lib.rs  migrations.rs  models.rs  queries.rs  session_merge.rs
doc/: KEYBINDS.md  RELEASES.md  ROADMAP.md  WORKER.md
scripts/: generate-update-manifest.js  get-version.js
