[package]
name = "agent-viz-adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["fs", "rt"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }

agent-viz-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.15"
