[package]
name = "agent-viz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-viz-adapters = { path = "../adapters" }
agent-viz-core = { path = "../core" }
agent-viz-store = { path = "../store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tauri = { version = "2.2", features = [] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.15"
