[package]
name = "agent-v-api"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-v-adapters = { path = "../adapters" }
agent-v-core = { path = "../core" }
agent-v-store = { path = "../store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tauri = { version = "2.2", features = [] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.15"
