[package]
name = "agent-v-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-viz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
serde = { workspace = true }
serde_json = "1.0"
owo-colors = { version = "4.1", features = ["supports-colors"] }
chrono = { workspace = true }

agent-v-adapters = { path = "../adapters" }
agent-v-core = { path = "../core" }
agent-v-store = { path = "../store" }
agent-v-ingest = { path = "../ingest" }
