[package]
name = "agent-v-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-v-core = { path = "../core" }
agent-v-store = { path = "../store" }
agent-v-adapters = { path = "../adapters" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }
notify = "8.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.15"
