[package]
name = "agent-v-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-v-core = { path = "../core" }
agent-v-store = { path = "../store" }
agent-v-adapters = { path = "../adapters" }
serde = { workspace = true }
serde_json = "1.0"
thiserror = "2.0"
log = { workspace = true }
tokio = { workspace = true }
notify = "8.0"
futures = "0.3"
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
