[package]
name = "agent-viz-store"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-viz-core = { path = "../core" }
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["chrono", "uuid", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "6.0"
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }

[dev-dependencies]
tempfile = "3.15"
