[package]
name = "agent-v-store"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-v-core = { path = "../core" }
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["chrono", "uuid", "serde_json"] }
serde = { workspace = true }
serde_json = "1.0"
thiserror = "2.0"
chrono = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "6.0"
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
